🎱👄 Checkpoint ./css/styles.css:22580378/104 ./styles.css:22580378/100

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 .live {
-    background-color: grey;
+  background-color: grey;
 }
 .die{
   background-color: black;
-  font
+  color: white; 
+  
 }
