--- a/styles.css
+++ b/styles.css
@@ -4,5 +4,9 @@
 .die{
   background-color: black;
   color: white; 
-
+  border: 3px;
+  width: 300px;
+  !-- margin: auto;
+  border: 2px solid white;
 }
+
