--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 .die{
   background-color: black;
   color: white; 
-  width: 300px;
+  /*width: 300px; */
   margin: auto;
   border: 2px solid white;
 }
