--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
   background-color: black;
   color: white; 
   border: 3px;
-  width: 300px;
-  !-- margin: auto;
+  /*width: 300px;*/
+  margin: auto; 
   border: 2px solid white;
 }
 
